# Patchvision

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cli/: inference.py  visualize.py
configs/: industrial.example.yaml  medical.example.yaml  validation.py
core/analytics/: visualizer.py
core/config/: manager.py
core/inference/: __init__.py  model_wrapper.py  pipeline.py
core/interfaces/: __init__.py
core/models/: __init__.py  serialization.py  versioning.py
core/patches/: __init__.py  factory.py  strategies.py
core/processors/: __init__.py  cpu.py  engine.py  gpu.py
core/projections/: __init__.py  attention.py  transfomer.py
core/utils/: error_recovery.py
core/validation/: __init__.py  validator.py
data/: __init__.py  realtime_stream.py
data/augmentation/: __init__.py  warfare.py
deploy/: __init__.py
deploy/api/: server.py
deploy/edge/: __init__.py  deployer.py
deploy/monitoring/: __init__.py  monitor.py
docs/: quickstart.md
examples/: api_demo.py  basic_usages.py
experiments/: __init__.py  hyperparameter_tuner.py  results_manager.py
experiments/ablation_studies/: __init__.py  ablation.py
patchvision/: __init__.py  main.py
patchvision/cli/: __init__.py  serve.py
patchvision/core/: __init__.py
patchvision/core/analytics/: __init__.py  benchmark.py  logger.py  monitoring.py  profiler.py
patchvision/core/config/: __init__.py  settings.py
patchvision/core/inference/: batch_processor.py  pipeline.py
patchvision/core/models/: model_manager.py  state_manager.py
patchvision/core/processors/: engine.py  quantization.py
patchvision/core/projections/: __init__.py  attention.py  transformer.py
patchvision/data/: realtime_stream.py  synthetic_factory.py
patchvision/vision/: holographic.py
scripts/: install_deps.sh  setup_windows.bat
tests/: __init__.py  integration_tests.py  test_core.py  test_data.py  test_deploy.py  test_integration.py  test_patches.py  test_vision.py
vision/: __init__.py  dashboard.py  holographic.py  vr.py
(+7 files in other folders)
